# eco-report-ai

./: .gitignore  README.md  config.yaml  pyproject.toml
Projects/eco-report-ai/: README.md
Projects/eco-report-ai/docs/: course_extracted_blueprint.md  course_raw_notes.md  implementation_map.md
Projects/eco-report-ai/eco_report_ai/: __init__.py  config.py  pipeline.py
Projects/eco-report-ai/eco_report_ai.egg-info/: SOURCES.txt  requires.txt  top_level.txt
Projects/eco-report-ai/eco_report_ai/data/: schema.py
Projects/eco-report-ai/eco_report_ai/evaluation/: __init__.py  metrics.py
Projects/eco-report-ai/eco_report_ai/features/: build_features.py
Projects/eco-report-ai/eco_report_ai/models/: __init__.py  econometrics.py  model_selection.py
Projects/eco-report-ai/eco_report_ai/reporting/: charts.py  report_writer.py
Projects/eco-report-ai/eco_report_ai/utils/: dates.py
Projects/eco-report-ai/tests/: conftest.py  test_data_loading.py  test_metrics.py  test_pipeline_integration.py
data/: sample_macro.csv
docs/: design_decisions.md  methodology.md
eco_report_ai/: __main__.py  cli.py  logging_config.py
eco_report_ai.egg-info/: PKG-INFO  entry_points.txt
eco_report_ai/data/: __init__.py  fred_client.py  loaders.py
eco_report_ai/evaluation/: backtesting.py
eco_report_ai/features/: __init__.py
eco_report_ai/models/: lstm.py  ml_baselines.py
eco_report_ai/reporting/: __init__.py  nlg.py
eco_report_ai/utils/: __init__.py  io.py
tests/: test_features.py  test_reporting.py
