[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-report-ai"
version = "1.0.0"
description = "Production-grade macroeconomic forecasting and report generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EcoReport AI Team" }]
keywords = ["econometrics", "forecasting", "machine-learning", "generative-ai", "macroeconomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "torch>=2.1",
    "fredapi>=0.5",
    "pandera>=0.18",
    "openai>=1.10",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
]

[project.scripts]
eco-report-ai = "eco_report_ai.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["eco_report_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
